human_written_tests/WebAssembly/processed_control_flow_validation/test_if_31.wast
(assert_invalid
  (module (func $type-both-value-empty-vs-num (result i32)
    (if (result i32) (i32.const 1) (then) (else))
  ))
  "type mismatch"
)